Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp-api
  template:
    metadata:
      labels:
        app: sampleapp-api
    spec:
      containers:
      - name: sampleapp-api
        image: vidadeumsysadmin/kubernetes:sampleapp
        imagePullPolicy: Always 
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - name: http 
          containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sampleapp-api
  name: sampleapp-api-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: sampleapp-api
  sessionAffinity: None
  type: ClusterIP
